# usedgoodreads

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.md  README.md  app.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.production.yaml  docker-compose.staging.yaml  docker-compose.yaml  requirements.txt
app/: Dockerfile  pyproject.toml
app/datamodels/: books.py
app/usedgoodreads/: __main__.py  base.py  jobs.py  kleinanzeigen.py  worker.py
app/usedgoodreads/models/: book.py  ticket.py  usedbook.py
app/usedgoodreads/static/: basic.css  mobile.css
app/usedgoodreads/templates/: index.html
backend/: .gitignore  Dockerfile  grclient.py  kleinanzeigen.py  pyproject.toml
backend/datamodels/: book.py  secondhandshops.py
backend/usedgoodreads/: __main__.py  kleinanzeigen.py
backend/usedgoodreads/models/: book.py  ticket.py  usedbook.py
env/: .app.env.example  .backend.env.example  .nginx.env.example  .nginx.production.env.example  .nginx.staging.env.example
frontend/: .babelrc  .npmrc  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/usedgoodreads/: App.tsx  index.html  index.tsx
nginx/: nginx.conf  server.conf
nginx/certs/: dhparams.pem  fullchain.pem  privkey.pem
src/: README.md  app.py
