[tool.poetry]
name = "usedgoodreads"
version = "0.1.0"
description = "Finding used good reads"
authors = ["UsedGoodreads <hello@usedgoodreads.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rq = "^1.4.1"
flask-sqlalchemy = "^2.4.1"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
